<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_text">How are you feeling Today?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diagnese">Diagnese</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_login_back_to_your_account">Let’s login back to your account</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="years_old">years old</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="_01">01</string>
    <string name="let_s_create_your_account">Let\'s create your account</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="age">Age</string>
    <string name="icon">icon</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="we_will_send_you_4_digits_of_code">We will send you 4 digits of code</string>
    <string name="enter_your_verification_code">Enter Your Verification Code</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="google">google</string>
    <string name="maps_features_coming_soon_stay_tuned">Maps Features Coming Soon! Stay Tuned</string>
</resources>