<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_400"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.auth.login.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:fontFamily="@font/relay_plus_jakarta_sans_bold"
        android:textColor="@color/blue_700"
        />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textColor="@color/blue_700"
        android:text="@string/let_s_login_back_to_your_account"
        />

    <include
        android:id="@+id/form_login_card"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle"
        android:layout_width="380dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:layout_height="480dp"
        layout="@layout/form_login_card" />

    <TextView
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/form_login_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:fontFamily="@font/relay_plus_jakarta_sans_bold"
        android:text="@string/don_t_have_an_account"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_text_btn"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/form_login_card"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/relay_plus_jakarta_sans_bold"
        android:textColor="@color/blue_700"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:text="@string/register"
        android:layout_height="wrap_content"
        android:focusable="true" />




</androidx.constraintlayout.widget.ConstraintLayout>