<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_400"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.auth.forgetpassword.SecondForgetFragment">

    <TextView
        android:id="@+id/forget_password_title"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:fontFamily="@font/relay_plus_jakarta_sans_bold"
        android:textColor="@color/blue_700"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/forget_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/blue_700"
        android:fontFamily="@font/relay_plus_jakarta_sans_bold"
        android:id="@+id/forget_password_desc"
        android:text="@string/we_will_send_you_4_digits_of_code"
        />

    <include
        android:layout_margin="20dp"
        layout="@layout/second_forget_password_card"
        android:layout_width="380dp"
        android:layout_height="280dp"
        android:id="@+id/form_second_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




    <TextView
        android:id="@+id/login_text_btn"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_second_forgot_password"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/relay_plus_jakarta_sans_bold"
        android:textColor="@color/blue_700"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:text="@string/back_to_sign_in"
        android:layout_height="wrap_content"
        android:focusable="true" />




</androidx.constraintlayout.widget.ConstraintLayout>