<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
       android:layout_height="480dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/first_login_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:text="@string/enter_your_username"
         android:textSize="18sp"
         android:fontFamily="@font/relay_plus_jakarta_sans_bold"
         />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_login_textField"
            app:layout_constraintTop_toBottomOf="@id/first_login_label"
            android:layout_margin="10dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_username"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_login_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_login_textField"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_password"
            android:textSize="18sp"
            android:fontFamily="@font/relay_plus_jakarta_sans_bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_login_textField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_login_label"
            android:layout_margin="10dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/second_login_textField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:textColor="@color/blue_500"
            android:fontFamily="@font/relay_plus_jakarta_sans_bold"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_button"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:textSize="18sp"
            android:fontFamily="@font/relay_plus_jakarta_sans_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:fontFamily="@font/relay_plus_jakarta_sans_bold"
            android:layout_marginTop ="10dp"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/or_continue_with"
            android:layout_height="wrap_content"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


   </androidx.cardview.widget.CardView>


